0.3.1
    * make object with file_columns serializable
    * use normal require for RMagick, so that it works with gem
      and custom install as well

0.3
    * fixed bug where empty file uploads were not recognized with some browsers
    * fixed bug on windows when "file" utility is not present
    * added option to disable automatic file extension correction
    * Only allow one attribute per call to file_column, so that options only
      apply to one argument
    * try to detect when people forget to set the form encoding to
      'multipart/form-data'
    * converted to rails plugin
    * easy integration with RMagick

0.2
    * complete rewrite using state pattern
    * fixed sanitize filename [Michael Raidel]
    * fixed bug when no file was uploaded [Michael Raidel]
    * try to fix filename extensions [Michael Raidel]
    * Feed absolute paths through File.expand_path to make them as simple as possible
    * Make file_column_field helper work with auto-ids (e.g., "event[]")

0.1.3
    * test cases with more than 1 file_column
    * fixed bug when file_column was called with several arguments
    * treat empty ("") file_columns as nil
    * support for binary files on windows

0.1.2
    * better rails integration, so that you do not have to include the modules yourself. You
      just have to "require 'rails_file_column'" in your "config/environment.rb"
    * Rakefile for testing and packaging

0.1.1 (2005-08-11)
    * fixed nasty bug in url_for_file_column that made it unusable on Apache
    * prepared for public release
    
0.1 (2005-08-10)
    * initial release