@@ -1,3 +1,6 @@
+*svn*
+    * allow for directories in file_column dirs as well
+
 0.3.1
     * make object with file_columns serializable
     * use normal require for RMagick, so that it works with gem
